# urinterfaces-release

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: industrial_ci.yml  pre-commit.yml
action/: SetMode.action
debian/: changelog  control  copyright  gbp.conf  rules
msg/: Analog.msg  AnalogIO.msg  AnalogIOStateStamped.msg  AnalogStamped.msg  ControlCycle.msg  DigitalIO.msg  DigitalIOStateStamped.msg  DigitalStamped.msg  JointMode.msg  JointTemperature.msg  RobotMode.msg  RuntimeState.msg  SafetyStatus.msg  TCPState.msg  ToolOutputMode.msg  VoltageCurrentStamped.msg  WorldModelNames.msg
rpm/: ros-humble-urinterfaces.spec
srv/: SetAnalogOutput.srv  SetDigitalOutput.srv  SetSpeedFraction.srv
